pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  pingpong-app
  template:
    metadata:
      labels:
        app:  pingpong-app
    spec:
      containers:
        - name: pingpong-app
          image: lucasnicolas/pingpong
          ports:
            - containerPort: 80
