pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  selector:
    app: pingpong-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
